--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,33 @@
 * {
     padding: 0;
     margin: 0;
-  
+ 
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
     
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #16161a;
+}
+
+.gotop{
+  z-index: 1;
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  backgrouund: red;
+  bottom: 40px;
+  right: 50px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: white;
+  font-size: 30px;
 }
 
 .hero {
