--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #16161a;
 }
@@ -15,7 +19,6 @@ body {
   position: fixed;
   width: 50px;
   height: 50px;
-  backgrouund: red;
   bottom: 40px;
   right: 50px;
   text-decoration: none;
