--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+ 
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
     
@@ -401,4 +402,110 @@ h5{
     color: #fffffe;
     bottom: 25px;
     font-size: 14px;
+}
+
+@media all  and (max-width: 500px){
+    * {
+        font-size: 16px;
+        box-sizing: border-box;
+        font-family: 'Josefin Sans', sans-serif;
+        margin: 0;
+        padding: 0;
+      } 
+      
+      .hero {
+        height: 100vh;
+        width: 0 auto;
+        /* padding: 4px 8% 0 8%; */
+        padding: 4px 6% 0 5%;
+
+      } 
+
+      nav {
+        padding-left: 15px auto;
+        padding-bottom: 15px;
+
+      } 
+
+      .content {
+        position: absolute;
+        bottom: 250px;
+      } 
+
+      .btn {
+        padding: 10px 17px;
+        border-radius: 30px;
+        transition: transform .4s;
+    }
+      
+      span {
+        display: block;
+        font-size: 75px;
+      } 
+
+      h1 {
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+        word-spacing: 10px;
+      } 
+
+      .newsletter form{
+        width: 290px;
+        max-width: 100%;
+        position: relative;
+    }
+
+      .about {
+        height: 100vh;
+        width: 0 auto;
+        text-align: center;
+        justify-content: center;
+        
+      }
+
+      img {
+       
+        /* height: 100vh; */
+        width: 300px auto;
+        max-width: 100px;
+      }
+
+     .about-text h2{
+       font-size: 5vh;
+       display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+       
+      }
+      
+      .about-text p{
+        font-size: 1.8vh;
+       }
+
+       .service{
+        height: 100%;
+       }
+
+       .box {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        /* min-height: 400px; */
+     }
+
+     .card {
+        margin: 10px 15px auto;
+        width: 345px;
+     }
+
+    
+
+     .contact-me p{ 
+        margin: 20px;
+        text-align: center;
+        justify-content: center;
+        display: inline-block;
+       }
 }
