--- a/css/style.css
+++ b/css/style.css
@@ -248,10 +248,13 @@ button:hover {
     padding: 20px 35px;
     background: #242629;
     border-radius: 20px;
-    margin: 10px 70px auto;
     position: relative;
     overflow: hidden;
     text-align: center;
+ }
+
+ div.card {
+    margin: 10px 70px auto;
  }
 
  .card i {
