--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,12 @@ h5{
         width: 345px;
         
      }
-
+	
+     div.card {
+        margin: 10px 70px 10px 15px;
+        width: 345px;
+        
+     }
     
 
      .contact-me p{ 
